provarAnt/00D180000008cIAEAY/objects/FulfillmentSnapshotProduct__c.object
<CustomObject>
    <description>Note: In software, the Project object is named SFDC_520_Quote.  This object will be a Detail to Fulfillment Snapshot Summary in a Master-Detail relationship.</description>
    <fields>
        <fullName>APFD__c</fullName>
        <label>APFD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Effective_Date__c</fullName>
        <label>Cancellation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Processed_Date__c</fullName>
        <label>Contract Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Budget_Amount__c</fullName>
        <label>Current Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Intro_Call_Complete__c</fullName>
        <label>Date Intro Call Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eso_Contract_Status__c</fullName>
        <label>Eso Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Pending Future Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Snapshot_Summary__c</fullName>
        <label>Haystak QuickView</label>
        <referenceTo>FulfillmentSnapshotSummary__c</referenceTo>
        <relationshipLabel>Haystak Implementation</relationshipLabel>
        <relationshipName>Fulfillment_Snapshot_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Haystak_Management_Fee__c</fullName>
        <label>Haystak Management Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Implementation_Notes_New__c</fullName>
        <label>Implementation Notes New</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_Hold_Type__c</fullName>
        <label>On Hold Type</label>
        <picklist>
            <picklistValues>
                <fullName>SEO Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kore 360</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Opportunity Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Identifier__c</fullName>
        <label>Project Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Overview__c</fullName>
        <label>Project Overview</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_POA_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related POA</label>
        <referenceTo>FulfillmentSnapshotPOA__c</referenceTo>
        <relationshipName>Fulfillment_Snapshot_Products_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Type__c</fullName>
        <label>Stage Type</label>
        <picklist>
            <picklistValues>
                <fullName>Addon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Go Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Pre-launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Closed Won Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Website Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Dealer Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Website Launch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>1-Initiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Planning and Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Executing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Finalizing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Website Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Pre-Live SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Dealer Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Post-Live SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration-Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration-ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration-CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO LIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_are_we_waiting_on__c</fullName>
        <label>What are we waiting on?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Haystak QuickView Project</label>
    <nameField>
        <label>Haystak QuickView Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Haystak QuickView Project</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>